// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test book Details page components and container should render and take snapshot of books detailsPage when data and book array are empty 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col s12 col m2 col l2 sidebar "
      id="sidenava"
    >
      <ul
        className="collapsible"
        data-collapsible="accordion"
      >
        <li>
          <div
            className="collapsible-header"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
        </li>
        <li>
          <div
            className="collapsible-header"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
        </li>
        <li>
          <div
            className="collapsible-header"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
        </li>
        <li>
          <div
            className="collapsible-header"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
        </li>
        <li>
          <div
            className="collapsible-header"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
        </li>
        <li>
          <div
            className="collapsible-header"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="container"
    id="book_details_wrapper"
  >
    <div
      className="row"
    >
      <div
        className="col m10  col l10 col s12 "
      >
        <div
          className="placeholders  "
        >
          <div
            className=" col s12 col m2 col l2 placeholder"
            id="photo"
          >
            <div
              id="img_body"
            >
              <img
                alt="avatar"
                src="l1.jpg"
                style={
                  Object {
                    "height": "250px",
                    "width": "150px",
                  }
                }
              />
            </div>
          </div>
        </div>
        <div
          className=" col s10 col m7 col l7"
        >
          <h5
            className="page-header"
          >
            THE PEOPLE IN THE TREE
          </h5>
          <hr />
          <h5>
            Summary
          </h5>
          <div
            className="modal"
            id="modal2"
          >
            <div
              className="modal-content"
            >
              <h5>
                Oh!
              </h5>
              <p
                className="displayErrorMessage"
              >
                
              </p>
            </div>
            <div
              className="modal-footer"
            >
              <a
                className="error-modal-close modal-action modal-close waves-effect waves-brown btn-flat"
                href=""
                onClick={[Function]}
              >
                Close
              </a>
            </div>
          </div>
          <div
            className="modal"
            id="modal3"
          >
            <div
              className="modal-content"
            >
              <h5>
                Wow!
              </h5>
              <p
                className="displaySuccessMessage"
              >
                
              </p>
            </div>
            <div
              className="modal-footer"
            >
              <a
                className="success-modal-close modal-action modal-close waves-effect waves-brown btn-flat"
                href=""
                onClick={[Function]}
              >
                Close
              </a>
            </div>
          </div>
          <div
            className="modal"
            id="modal1"
          >
            <div
              className="modal-content"
            >
              <h5>
                Do you want to add this book to your archives?
              </h5>
              <p>
                THE PEOPLE IN THE TREE
              </p>
            </div>
            <div
              className="modal-footer"
            >
              <a
                className="modal-action modal-close waves-effect waves-brown btn-flat"
                href=""
                id="btn-no"
                onClick={[Function]}
              >
                NO
              </a>
              <a
                className="modal-action modal-close waves-effect waves-brown btn-flat"
                href=""
                id="btn-yes"
                onClick={[Function]}
              >
                YES
              </a>
            </div>
          </div>
          <span
            className="text-muted"
            id="sum"
          >
            Lorem Ipronic typesetting, remaininised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
          </span>
          <div
            className=""
          >
            <p
              className="bookinfo"
            >
              Category: 
              Adventure
               
            </p>
            <p
              className="bookinfo"
            >
              ISBN: 
              345798465
               
            </p>
            <p
              className="bookinfo"
            >
              Number in Stock: 
              2
               
            </p>
          </div>
          <div
            className="form-inline"
          >
            <button
              className="btn-sm btn-success shop"
              id="borrowbtn"
              onClick={[Function]}
              type="submit"
            >
              Borrow
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="activity"
      id="activity-loader-id"
      style={
        Object {
          "display": "none",
        }
      }
    >
      <div
        className="preloader-wrapper activity-loader big active"
      >
        <div
          className="gap-patch activity-gap2"
        >
          <div
            className="spinner-layer activity-spinner spinner-red-only"
          >
            <div
              className="circle-clipper left"
            >
              <div
                className="circle"
              />
            </div>
            <div
              className="gap-patch activity-gap"
            />
            <div
              className="circle"
            />
          </div>
          <div
            className="circle-clipper right"
          >
            <div
              className="circle"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test book Details page components and container should render and take snapshot of booksDetailsPage 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col s12 col m2 col l2 sidebar "
      id="sidenava"
    >
      <ul
        className="collapsible"
        data-collapsible="accordion"
      >
        <li>
          <div
            className="collapsible-header"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
        </li>
        <li>
          <div
            className="collapsible-header"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
        </li>
        <li>
          <div
            className="collapsible-header"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
        </li>
        <li>
          <div
            className="collapsible-header"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
        </li>
        <li>
          <div
            className="collapsible-header"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
        </li>
        <li>
          <div
            className="collapsible-header"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
          <div
            className="collapsible-body"
          />
        </li>
      </ul>
    </div>
  </div>
  <div
    className="container"
    id="book_details_wrapper"
  >
    <div
      className="row"
    >
      <div
        className="col m10  col l10 col s12 "
      >
        <div
          className="placeholders  "
        >
          <div
            className=" col s12 col m2 col l2 placeholder"
            id="photo"
          >
            <div
              id="img_body"
            >
              <img
                alt="avatar"
                src="l1.jpg"
                style={
                  Object {
                    "height": "250px",
                    "width": "150px",
                  }
                }
              />
            </div>
          </div>
        </div>
        <div
          className=" col s10 col m7 col l7"
        >
          <h5
            className="page-header"
          >
            THE PEOPLE IN THE TREE
          </h5>
          <hr />
          <h5>
            Summary
          </h5>
          <div
            className="modal"
            id="modal2"
          >
            <div
              className="modal-content"
            >
              <h5>
                Oh!
              </h5>
              <p
                className="displayErrorMessage"
              >
                
              </p>
            </div>
            <div
              className="modal-footer"
            >
              <a
                className="error-modal-close modal-action modal-close waves-effect waves-brown btn-flat"
                href=""
                onClick={[Function]}
              >
                Close
              </a>
            </div>
          </div>
          <div
            className="modal"
            id="modal3"
          >
            <div
              className="modal-content"
            >
              <h5>
                Wow!
              </h5>
              <p
                className="displaySuccessMessage"
              >
                
              </p>
            </div>
            <div
              className="modal-footer"
            >
              <a
                className="success-modal-close modal-action modal-close waves-effect waves-brown btn-flat"
                href=""
                onClick={[Function]}
              >
                Close
              </a>
            </div>
          </div>
          <div
            className="modal"
            id="modal1"
          >
            <div
              className="modal-content"
            >
              <h5>
                Do you want to add this book to your archives?
              </h5>
              <p>
                THE PEOPLE IN THE TREE
              </p>
            </div>
            <div
              className="modal-footer"
            >
              <a
                className="modal-action modal-close waves-effect waves-brown btn-flat"
                href=""
                id="btn-no"
                onClick={[Function]}
              >
                NO
              </a>
              <a
                className="modal-action modal-close waves-effect waves-brown btn-flat"
                href=""
                id="btn-yes"
                onClick={[Function]}
              >
                YES
              </a>
            </div>
          </div>
          <span
            className="text-muted"
            id="sum"
          >
            Lorem Ipronic typesetting, remaininised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
          </span>
          <div
            className=""
          >
            <p
              className="bookinfo"
            >
              Category: 
              Adventure
               
            </p>
            <p
              className="bookinfo"
            >
              ISBN: 
              345798465
               
            </p>
            <p
              className="bookinfo"
            >
              Number in Stock: 
              2
               
            </p>
          </div>
          <div
            className="form-inline"
          >
            <button
              className="btn-sm btn-success shop"
              id="borrowbtn"
              onClick={[Function]}
              type="submit"
            >
              Borrow
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      className="activity"
      id="activity-loader-id"
      style={
        Object {
          "display": "none",
        }
      }
    >
      <div
        className="preloader-wrapper activity-loader big active"
      >
        <div
          className="gap-patch activity-gap2"
        >
          <div
            className="spinner-layer activity-spinner spinner-red-only"
          >
            <div
              className="circle-clipper left"
            >
              <div
                className="circle"
              />
            </div>
            <div
              className="gap-patch activity-gap"
            />
            <div
              className="circle"
            />
          </div>
          <div
            className="circle-clipper right"
          >
            <div
              className="circle"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test book Details page components and container should render and take snapshot of details form when data and book array are empty 1`] = `
<div
  className="container"
  id="book_details_wrapper"
>
  <div
    className="row"
  >
    <div
      className="col m10  col l10 col s12 "
    >
      <div
        className="placeholders  "
      >
        <div
          className=" col s12 col m2 col l2 placeholder"
          id="photo"
        >
          <div
            id="img_body"
          >
            <img
              alt="avatar"
              src="l1.jpg"
              style={
                Object {
                  "height": "250px",
                  "width": "150px",
                }
              }
            />
          </div>
        </div>
      </div>
      <div
        className=" col s10 col m7 col l7"
      >
        <h5
          className="page-header"
        >
          THE PEOPLE IN THE TREE
        </h5>
        <hr />
        <h5>
          Summary
        </h5>
        <div
          className="modal"
          id="modal2"
        >
          <div
            className="modal-content"
          >
            <h5>
              Oh!
            </h5>
            <p
              className="displayErrorMessage"
            >
              
            </p>
          </div>
          <div
            className="modal-footer"
          >
            <a
              className="error-modal-close modal-action modal-close waves-effect waves-brown btn-flat"
              href=""
              onClick={[Function]}
            >
              Close
            </a>
          </div>
        </div>
        <div
          className="modal"
          id="modal3"
        >
          <div
            className="modal-content"
          >
            <h5>
              Wow!
            </h5>
            <p
              className="displaySuccessMessage"
            >
              
            </p>
          </div>
          <div
            className="modal-footer"
          >
            <a
              className="success-modal-close modal-action modal-close waves-effect waves-brown btn-flat"
              href=""
              onClick={[Function]}
            >
              Close
            </a>
          </div>
        </div>
        <div
          className="modal"
          id="modal1"
        >
          <div
            className="modal-content"
          >
            <h5>
              Do you want to add this book to your archives?
            </h5>
            <p>
              THE PEOPLE IN THE TREE
            </p>
          </div>
          <div
            className="modal-footer"
          >
            <a
              className="modal-action modal-close waves-effect waves-brown btn-flat"
              href=""
              id="btn-no"
              onClick={[Function]}
            >
              NO
            </a>
            <a
              className="modal-action modal-close waves-effect waves-brown btn-flat"
              href=""
              id="btn-yes"
              onClick={[Function]}
            >
              YES
            </a>
          </div>
        </div>
        <span
          className="text-muted"
          id="sum"
        >
          Lorem Ipronic typesetting, remaininised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum
        </span>
        <div
          className=""
        >
          <p
            className="bookinfo"
          >
            Category: 
            Adventure
             
          </p>
          <p
            className="bookinfo"
          >
            ISBN: 
            345798465
             
          </p>
          <p
            className="bookinfo"
          >
            Number in Stock: 
            2
             
          </p>
        </div>
        <div
          className="form-inline"
        >
          <button
            className="btn-sm btn-success shop"
            id="borrowbtn"
            onClick={[Function]}
            type="submit"
          >
            Borrow
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="activity"
    id="activity-loader-id"
    style={
      Object {
        "display": "none",
      }
    }
  >
    <div
      className="preloader-wrapper activity-loader big active"
    >
      <div
        className="gap-patch activity-gap2"
      >
        <div
          className="spinner-layer activity-spinner spinner-red-only"
        >
          <div
            className="circle-clipper left"
          >
            <div
              className="circle"
            />
          </div>
          <div
            className="gap-patch activity-gap"
          />
          <div
            className="circle"
          />
        </div>
        <div
          className="circle-clipper right"
        >
          <div
            className="circle"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
